- New effort in the context menu did not work in release 0.28 
  (reported by Kent Tenney) (1178562).
- When selecting 'View' -> 'Completed tasks' in the task tree, only
  completed root tasks were hidden (?).
  
Features added:
- What tab is active is now a persistent setting. This includes the tabs 
  and choices in the mainwindow and the effort choices in the task editor
  (1178779).



Release 0.28 - April 6, 2005

Bugs fixed:
- Hitting return or double click to edit effort in the task editor 
  now works (1172164).
- Subtasks with the same name would only be visible once in the task tree
  view.

Features added:
- You can hide composite tasks in the task list view so that only leaf
  tasks are visible. Menu item 'View' -> 'Tasks with subtasks'. Requested 
  by Brian Crounse.



Release 0.27 - April 4, 2005

Features added:
- Tasks can have a budget.



Release 0.26 - March 28, 2005

Bugs fixed:
- Marking a task completed did not stop effort tracking (1159918).
- Reading lots of efforts was slow.

Features added:
- Save button is disabled when saving is not necessary, requested by Mike
  Vorozhbensky (1164472).
- Effort records have a description field, requested by Kent (1167147).



Release 0.25 - March 13, 2005 

Bugs fixed:
- The menu item 'Effort' -> 'New effort' did not work in release 0.24.

Features added:
- XML export now includes effort records.
- Effort per day, per week and per month view now also show total time 
  spent (i.e. time including time spent on subtasks). 



Release 0.24 - March 10, 2005

Bugs fixed:
- Saving a selection of tasks to a separate file would also save all effort 
  records to that file (instead of just the effort records for the selected 
  tasks), giving errors when loading that file.
- Deleting a task with effort records would not delete the effort
  records.

Features added:
- The tracking status of tasks is saved. So if you start tracking a
  task, quit Task Coach, and restart Task Coach later, effort for that 